[package]
name = "xoroshiro128"
version = "0.0.0"
authors = ["Matthew Scharley <matt.scharley@gmail.com>"]
description = "Fast psuedo-random number generators"
documentation = "https://mscharley.github.io/rust-xoroshiro128/"
repository = "https://github.com/mscharley/rust-xoroshiro128"
readme = "README.md"
license = "MIT"
keywords = ["rng", "random", "xorshift", "xoroshiro", "splitmix"]
exclude = [".gitignore", "circle.yml"]

[dependencies]
rand_core = "0.5"
rand = { version = "0.7", optional = true }
